refactor: #2
EventPlanner 리팩터링
- 예외 메세지 static 변수로 변경
InputValidationHelper 리팩터링
- do-while문으로 변경 해봄
Order 리팩터링
- List.copyOf 사용하여 List<OrderedMenu> 받도록 변경
- 주말혜택 및 평일혜택 적용 가능 로직 수정
OrderedMenu 리팩터링
- 메서드명 좀 더 직관적으로 변경
SaleProfit 리팩터링
- String.format 사용하여 String 반환하도록 변경
EventPlannerPrinter 리팩터링
- 메서드명 좀 더 직관적으로 변경
OutputView
- 출력 형식은 StringBuilder를 사용하도록 변경.
- 각 출력 내용별로 메서드 구분 및 해당 도메인으로 캡슐화

Closes #2

feat: #3 테스트 작성

EventPlanner 테스트 작성
- 기존 테스트로는 infinite loop이 발생하여 EventPlanner를 모방하는 MockEventPlanner생성
- InputValiationHelper의 기능을 모방하는 MockInputValidator생성
- 잘못된 정보를 반환하는 MockInvalidMenuInput 생성

Closes #3